--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ hr {
 
 .top-container {
   background-color: #E4F9F5;
-  padding-top: 100px;
+  padding-top: 80px;
   font-family: 'Josefin Sans', sans-serif;
 }
 
@@ -68,6 +68,18 @@ hr {
   width: 50%;
   margin: 50px auto 100px auto;
   text-align: left;
+}
+
+.academic-row{
+  width: 50%;
+  margin: 50px auto 100px auto;
+}
+.college{
+  display: inline;
+}
+.school{
+  display: inline;
+  text-align: right;
 }
 
 .skill-image-electronics {
@@ -102,6 +114,7 @@ hr {
   font-size: 25px;
   text-decoration: none;
 }
+
 
 .btn {
   background: #11cdd4;
